# fastapi-app-example

./: .env.dev  .env.example  .env.prod  .env.test  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  helm-publish.yaml
app/: basic_auth.py  config.py  main.py
app/routers/: build_info.py  root.py
deployment/k8s/argocd/: application.yaml
deployment/k8s/helm/: Makefile
deployment/k8s/helm/chart/: Chart.yaml  values.yaml
deployment/k8s/helm/chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deployment/k8s/helm/chart/templates/tests/: test-connection.yaml
tests/: test_root.py  test_status.py
